fixed blurry score text

--- a/assets/css/endScreen.css
+++ b/assets/css/endScreen.css
@@ -15,9 +15,6 @@
 }
 
 #restartGameBtn {
-    width: 220px;
-    height: 42px;
-    font-size: 24px;
     margin-top: 18px;
     margin-bottom: 24px;
 }
